src/styles/_navigation.scss
/* Main Navigation Bar */
nav {
	display: block;
	background-color: $primary-light;
	padding: 1em;
	padding-bottom: 0;
	clear: both;
	position: relative;
	margin-bottom: 0.5em;
	box-shadow: 0px 4px 6px $black;
	z-index: 2;

	#logo {
		display: inline-block;
		overflow: hidden;
		padding: 1em 1em;
		background-color: white;
		border: 1px solid $black;
		box-shadow: 3px 4px 6px $black;
	}

	.mob-menu {
		display: inline-block;
		position: relative;
		float: right;
		height: auto;
		right: 11px;
		top: 50%;
		border: 1px solid $black;
		border-radius: 5px;
		padding: 0.3em 0.5em;
		box-shadow: 3px 4px 6px $black;
		font-size: 2em;
		color: white;
		background-color: $primary-light;
		text-align: center;
		transform: translate(0, 45%);

		&:hover {
			background-color: $primary;
		}	
	}

	ul {
		position: relative;
		display: none;
		list-style-type: none;
		background-color: $primary-light;
		margin-top: 1em;
		margin-bottom: 0;
		padding-bottom: 1em;
	}

	li {
		display: inline-block;
		margin-bottom: 1%;
		width: 49%;
	}

	a {
		display: block;
		color: white;
		padding: 1em 1.6em;
		text-align: center;
		text-decoration: none;
		margin-bottom: 0;

		&:hover {
			background-color: $primary;
			color: white;
			// outline: 1px solid black;
			// outline-offset: -1px;
			box-shadow: inset 0px 0px 5px $black;
		}

		&.active {
			background-color: $primary;
			color: white;
			box-shadow: inset 0px 0px 5px $black;
			outline: 0;
		}
	}

	.close {
		display: none;
		position: absolute;
		right: 11px;
		bottom: 3px;
		height: 75px;
		transform: translate(0, 100%);
		cursor: pointer;
		z-index: 1;
	}
}
/* Styles for screen larger than tablet */
@media (min-width: 750px) {

	nav {
		padding: 0;
		clear: none;
		margin-bottom: 0;

		.mob-menu {
			display: none;
		}

		ul {
			display: block;
			position: fixed;
			top: 0;
			background-color: $primary-light;
			overflow: hidden;
			width: 100%;
			margin: 0 auto;
			padding: 0;
			box-shadow: 0px 4px 6px $black;
		}

		li {
			width: auto;
			float: left;
			margin: 0;

			&.right {
				float: right;
			}

			a {
				display: inline-block;
				color: white;
				padding: 2.1em 1.6em;
				text-align: center;
				text-decoration: none;

				&.active {
					background-color: $primary;
					color: white;
					box-shadow: inset 0px 0px 5px $black;
				}

				&:hover {
				outline: 1px solid black;
				outline-offset: -1px;
				box-shadow: 0;
				}
			}
		}
		// default logo style
		#logo {
			position: absolute;
			z-index: 1;
			width: 25%;
			height: auto;
			max-width: 13em;
			top: 1em;
			left: 50%;
			padding: 30px 40px 50px 40px;
			background: white;
			border: 1px solid $black;
			transform: translate(-50%);
			transition: position 0.2s, top 0.2s, padding 0.5s;
		}

		// styles logo on scroll
		#logo.small{
			position: fixed;
			top: 0;
			height: 5em;
			padding: 1em 3px 1em 3px;
		}
	}

	.close {
		display: none;
		position: absolute;
	}
}

